<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_dash"
        android:icon="@drawable/ic_dashboard"
        android:enabled="true"
        android:iconTint="@color/noise_texture"
        android:title="@string/menu_dash"/>
    <item
        android:id="@+id/menu_phone"
        android:icon="@drawable/ic_phone_android"
        android:enabled="true"
        android:iconTint="@color/noise_texture"
        android:title="@string/menu_phone"/>
    <item
        android:id="@+id/menu_social_media"
        android:icon="@drawable/ic_social_media"
        android:enabled="true"
        android:iconTint="@color/noise_texture"
        android:title="@string/menu_social_md"/>
    <item
        android:id="@+id/alerts"
        android:icon="@drawable/ic_alert"
        android:enabled="true"
        android:iconTint="@color/noise_texture"
        android:title="@string/menu_alerts"/>
</menu>