<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDevice">

    <View
        android:id="@+id/view_noise_texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/noise_texture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_add_device"
        android:layout_width="@dimen/width_txt_child_device"
        android:layout_height="@dimen/height_txt_child_device"
        android:alpha="0.86"
        android:breakStrategy="balanced"
        android:fontFamily="@font/abel_regular"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/lineSpacingExtra"
        android:maxLines="2"
        android:text="@string/txt_add_device"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:lineHeight="35dp"
        android:translationY="@dimen/translationY"
        app:autoSizeTextType="uniform"
        android:layout_marginTop="@dimen/margin_spacing1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/img_chatting"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_info_add_devices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_add_device"
        android:textColor="@color/white"
        android:fontFamily="@font/abel_regular"
        android:textSize="18sp"
        android:lineHeight="20sp"
        android:alpha="0.86"
        android:gravity="top"
        android:layout_marginStart="@dimen/margin_side_txt"
        android:layout_marginEnd="@dimen/margin_side_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_add_device"
        app:layout_constraintBottom_toTopOf="@id/txt_steps"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_steps"
        android:textColor="@color/white"
        android:fontFamily="@font/abel_regular"
        android:textSize="18sp"
        android:lineHeight="15sp"
        android:alpha="0.86"
        android:gravity="top"
        android:layout_marginTop="@dimen/margin_between_btn"
        android:layout_marginStart="@dimen/margin_side_txt"
        android:layout_marginEnd="@dimen/margin_side_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_info_add_devices"/>

    <ImageView
        android:id="@+id/img_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_steps"
        app:layout_constraintBottom_toTopOf="@id/relative_buttons"/>


    <RelativeLayout
        android:id="@+id/relative_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_btn"
        android:layout_marginEnd="@dimen/margin_side_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_qr_code"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/width_btn"
            android:layout_height="@dimen/height_btn"
            android:background="@drawable/button_normal"
            android:text="@string/skip"
            android:textSize="18sp"
            android:fontFamily="@font/abel_regular"
            android:textColor="@color/noise_texture"
            android:layout_alignParentLeft="true"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="@dimen/width_btn"
            android:layout_height="@dimen/height_btn"
            android:background="@drawable/button_normal"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableTint="@color/noise_texture"
            android:text="@string/next"
            android:textSize="18sp"
            android:fontFamily="@font/abel_regular"
            android:textColor="@color/noise_texture"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_home_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_indicator"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>